fixed error message font size on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,4 +123,8 @@ li {
   #resultsDiv div {
     font-size: 4.5vw;
   }
+
+  #errorDiv {
+    font-size: 4.8vw;
+  }
 }
